@@ -52,10 +52,12 @@ API_VERSION_ENV_MAP = {
 }
 
 # Defaults/settings for Data API requests
+DEFAULT_BINARY_ENCODE_VECTORS = True
+DEFAULT_LOSSLESS_CUSTOM_CLASSES = False
+DEFAULT_COERCE_ITERABLES_TO_VECTORS = False
+
 DEFAULT_INSERT_MANY_CHUNK_SIZE = 50
 DEFAULT_INSERT_MANY_CONCURRENCY = 20
-DEFAULT_BINARY_ENCODE_VECTORS = False
-DEFAULT_LOSSLESS_CUSTOM_CLASSES = False
 DEFAULT_REQUEST_TIMEOUT_MS = 30000
 DEFAULT_DATA_OPERATION_TIMEOUT_MS = 30000
 DEFAULT_SCHEMA_OPERATION_TIMEOUT_MS = 45000
