@@ -2,6 +2,7 @@ services:
 
   # complement with something like:
   #   docker run -it --rm --network container:dse_compose-coordinator-1 cassandra:latest cqlsh -u cassandra -p cassandra
+  #     create keyspace default_keyspace WITH replication = {'class': 'SimpleStrategy', 'replication_factor': 1};
 
   # Development mode with latest taf
   coordinator:
