@@ -1,5 +1,6 @@
 v 2.0.0
 =======
+Introduced `DataAPIVector` class (Iterable, Sequence): this also offers better control over vector binary serialization in Tables
 Collections are optionally typed:
     - `get_collection` and `create_collection` get a `document_type` parameter to go with the type hint `Collection[MyType]`
     - if unspecified fall back to `DefaultCollection = Collection[DefaultDocumentType]` (where `DefaultDocumentType = dict[str, Any]`)
@@ -33,6 +34,8 @@ Reworked the options system:
     - collection and database's `info` method gets timeout parameters
     - (not user-facing) classes in the hierarchy other than DataAPIClient have breaking changes in their constructor (now options-first and keyword-arg-only)
     - introduced `payload_transform_options.lossless_custom_classes`, also controlling datetime management in Collections
+    - introduced `payload_transform_options.binary_encode_vectors`, affecting read/writes wire format for collections
+    - introduced `payload_transform_options..coerce_iterables_to_vectors` to make the write path tolerant w.r.t. lazy iterables, numpy etc in writing vectors
 Major restructuring of the codebase into directories
     - BaseCursor not exported by astrapy.cursors anymore
     - some imports (supposedly not used externally) changed slightly
